Fix navbar hamburger position on mobile2

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 
 .navbar {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   /*padding: 15px 10%;*/
